Added remaining tests

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -202,9 +202,44 @@
     <Compile Include="Security\TestBOPropAuthorisation.cs" />
     <Compile Include="Security\TestBusinessObjectAuthorisation.cs" />
     <Compile Include="TestBOError.cs" />
+    <Compile Include="TestBOHelper.cs" />
+    <Compile Include="TestBoKey.cs" />
+    <Compile Include="TestBOKeyCol.cs" />
+    <Compile Include="TestBoMapper.cs" />
+    <Compile Include="TestBOObjectID.cs" />
+    <Compile Include="TestBOPrimaryKey.cs" />
     <Compile Include="TestBoProp.cs" />
+    <Compile Include="TestBoPropCol.cs" />
+    <Compile Include="TestBOPropDateTime.cs" />
+    <Compile Include="TestBOPropertyMapper.cs" />
+    <Compile Include="TestBOPropertyMapperFactory.cs" />
+    <Compile Include="TestBOPropGuid.cs" />
+    <Compile Include="TestBOPropInteger.cs" />
+    <Compile Include="TestBOPropLookupList_BusinessObjectLookupList_GuidID.cs" />
+    <Compile Include="TestBOPropLookupList_BusinessObjectLookupList_IntID.cs" />
+    <Compile Include="TestBOPropLookupList_SimpleLookupList.cs" />
     <Compile Include="TestBoPropString.cs" />
+    <Compile Include="TestBORegistry.cs" />
+    <Compile Include="TestBORelationshipMapper.cs" />
+    <Compile Include="TestBOSerialisation.cs" />
+    <Compile Include="TestBOStatus.cs" />
+    <Compile Include="TestBusinessObject.cs" />
+    <Compile Include="TestBusinessObjectInheritance.cs" />
+    <Compile Include="TestBusinessObjectLastUpdatePropertiesLog.cs" />
+    <Compile Include="TestBusinessObjectLookupList.cs" />
     <Compile Include="TestBusinessObjectManager.cs" />
+    <Compile Include="TestBusinessObjectManagerNull.cs" />
+    <Compile Include="TestBusinessObjectRules.cs" />
+    <Compile Include="TestBusinessObjectUpdateLog.cs" />
+    <Compile Include="TestDataAccessorMultiSource.cs" />
+    <Compile Include="TestDatabaseLookupList.cs" />
+    <Compile Include="TestDataSetProvider.cs" />
+    <Compile Include="TestDataStoreInMemory.cs" />
+    <Compile Include="TestDataStoreInMemoryBinaryWriter.cs" />
+    <Compile Include="TestDataStoreInMemoryXmlWriter.cs" />
+    <Compile Include="TestDeleteHelper.cs" />
+    <Compile Include="TestEditableDataSetProvider.cs" />
+    <Compile Include="TestNumberGenerator.cs" />
     <Compile Include="TestPack\AddressTestBO.cs" />
     <Compile Include="TestPack\BOWithIntID.cs" />
     <Compile Include="TestPack\BOWithIntID_Child.cs" />
@@ -212,6 +247,13 @@
     <Compile Include="TestPack\ContactPersonTestBO.cs" />
     <Compile Include="TestPack\OrganisationTestBO.cs" />
     <Compile Include="TestPack\PersonTestBO.cs" />
+    <Compile Include="TestPropertyComparer.cs" />
+    <Compile Include="TestPropertyLink.cs" />
+    <Compile Include="TestReadOnlyDataSetProvider.cs" />
+    <Compile Include="TestReflectionPropertyMapper.cs" />
+    <Compile Include="TestRelKey.cs" />
+    <Compile Include="TestSimpleLookupList.cs" />
+    <Compile Include="TestTransactionLogger.cs" />
     <Compile Include="TransactionCommitterStub.cs" />
     <Compile Include="TransactionCommitters\TestTransactionalBusinessObject.cs" />
     <Compile Include="TransactionCommitters\TestTransactionCommitter.cs" />
