--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -1,163 +1,76 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1484CDE2-0A30-466F-9FEA-E79CE2751489}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>
-    </ApplicationIcon>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Habanero.Test.DB</AssemblyName>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <DelaySign>false</DelaySign>
+    <ProductVersion>9.0.30729</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{2A6564CF-775A-47A0-86B5-65C00FDC4659}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Habanero.Test.DB</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <StartupObject>
-    </StartupObject>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Habanero.Test.Db</RootNamespace>
+    <AssemblyName>Habanero.Test.Db</AssemblyName>
+    <ProjectTypeGuids>{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <PlatformFamilyName>WindowsCE</PlatformFamilyName>
+    <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
+    <OSVersion>5.0</OSVersion>
+    <DeployDirSuffix>Habanero.Test.Db</DeployDirSuffix>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <NativePlatformName>Windows CE</NativePlatformName>
+    <FormFactorID>
+    </FormFactorID>
     <SignAssembly>true</SignAssembly>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>bin\Debug\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <Optimize>false</Optimize>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;$(PlatformFamilyName)</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <PlatformTarget>x86</PlatformTarget>
+    <FileAlignment>512</FileAlignment>
+    <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>false</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <Optimize>true</Optimize>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <DefineConstants>TRACE;$(PlatformFamilyName)</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
+    <ErrorReport>prompt</ErrorReport>
+    <FileAlignment>512</FileAlignment>
     <WarningLevel>4</WarningLevel>
-    <DebugType>none</DebugType>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <Optimize>true</Optimize>
-    <FileAlignment>4096</FileAlignment>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FirebirdSql.Data.FirebirdClient, Version=2.0.1.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\FirebirdSql.Data.FirebirdClient.dll</HintPath>
-    </Reference>
+    <Reference Include="mscorlib" />
     <Reference Include="MySql.Data, Version=6.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MySql.Data.dll</HintPath>
-      <Private>True</Private>
     </Reference>
-    <Reference Include="nmock, Version=1.0.1536.20687, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nmock.dll</HintPath>
-    </Reference>
-    <Reference Include="Npgsql, Version=1.97.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Npgsql.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks, Version=3.5.0.1337, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
-    </Reference>
-    <Reference Include="System">
-      <Name>System</Name>
-    </Reference>
-    <Reference Include="System.Data">
-      <Name>System.Data</Name>
-    </Reference>
-    <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.SQLite, Version=1.0.46.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\System.Data.SQLite.DLL</HintPath>
-    </Reference>
-    <Reference Include="System.Xml">
-      <Name>System.XML</Name>
-    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatementGeneratorTestHelper.cs" />
+    <Compile Include="TestBOPropLookupList_DatabaseLookupList_GuidID.cs" />
+    <Compile Include="TestBOPropLookupList_DatabaseLookupList_Int.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.snk" />
+    <None Include="sqlite-testdb.db" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
       <Project>{75043A90-2D88-43A0-8C64-EA51B6B2826A}</Project>
       <Name>Habanero.Base</Name>
@@ -170,131 +83,28 @@
       <Project>{47FDF59D-7304-4883-AC23-129ED1BF1908}</Project>
       <Name>Habanero.Db</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
-      <Project>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</Project>
-      <Name>Habanero.Test.Structure</Name>
+    <ProjectReference Include="..\Habanero.Test.Bo\Habanero.Test.BO.csproj">
+      <Project>{5EE52ED1-C9EC-45C0-8FB3-AF353FD31DC4}</Project>
+      <Name>Habanero.Test.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
+      <Project>{37E55226-D08F-4A7E-85AE-79D7993E1AE5}</Project>
+      <Name>Habanero.Test</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ConcurrencyControl\TestConcurrencyControl_OptimisticLockingVersionNumberDB.cs" />
-    <Compile Include="ConcurrencyControl\TestConcurrencyControl_PessimisticLockingDB.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceBase.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceClassTable.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceClassTableCopyID.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceClassTableNoID.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceConcreteTable.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceHierarchyBase.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceHierarchyClassTable.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceHierarchyConcreteTable.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceHierarchySingleClass.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceHierarchySingleTable.cs" />
-    <Compile Include="InheritanceSqlGeneration\TestInheritanceSingleTable.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="..\Common\AssemblyInfoShared.cs">
-      <Link>Properties\AssemblyInfoShared.cs</Link>
-    </Compile>
-    <Compile Include="StatementGeneratorTestHelper.cs" />
-    <Compile Include="TestBOPropLookupList_DatabaseLookupList_GuidID.cs" />
-    <Compile Include="TestBOPropLookupList_DatabaseLookupList_Int.cs" />
-    <Compile Include="TestBusinessObjectLoaderDB.cs" />
-    <Compile Include="TestBusinessObjectLoaderDBWithInheritance.cs" />
-    <Compile Include="TestBusinessObjectLoader_GetBusinessObjectCollectionDB.cs" />
-    <Compile Include="TestBusinessObjectLoader_RefreshCollectionDB.cs" />
-    <Compile Include="TestBusinessObjectLookupListDB.cs" />
-    <Compile Include="TestCriteriaDB.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnection.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionAccess.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionFirebird.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionMySql.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionOracle.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionPostgreSql.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionSQLite.cs" />
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionSqlServer.cs" />
-    <Compile Include="TestDataAccessorDB.cs" />
-    <Compile Include="TestDataAccessorInMemory.cs" />
-    <Compile Include="TestDbMigrator.cs" />
-    <Compile Include="TestConnectionStringFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestDatabaseConfig.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionCreation.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnection\TestDatabaseConnectionFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestDeleteStatementGenerator.cs" />
-    <Compile Include="TestGeneral.cs" />
-    <Compile Include="TestCompositeKeyBO.cs" />
-    <Compile Include="TestInsertStatementGenerator.cs" />
-    <Compile Include="TestMultipleRelationship_Aggregation_DB.cs" />
-    <Compile Include="TestMultipleRelationship_Association_DB.cs" />
-    <Compile Include="TestMultipleRelationship_Composition_DB.cs" />
-    <Compile Include="TestMySqlDatabaseConnection.cs" />
-    <Compile Include="TestNumberGeneratorDB.cs" />
-    <Compile Include="TestParameterNameGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestRelatedBOCol_Aggregation_UsingDB.cs" />
-    <Compile Include="TestRelatedBOCol_Association_WithDB.cs" />
-    <Compile Include="TestRelatedBOCol_Association_WithOracleDB.cs" />
-    <Compile Include="TestRelatedBOCol_Composition_UsingDB.cs" />
-    <Compile Include="TestSelectQueryDB.cs" />
-    <Compile Include="TestSingleRelationship_Aggregation_DB.cs" />
-    <Compile Include="TestSingleRelationship_Association_DB.cs" />
-    <Compile Include="TestSingleRelationship_Composition_DB.cs" />
-    <Compile Include="TestSourceDB.cs" />
-    <Compile Include="TestSqlFormatterForAccess.cs" />
-    <Compile Include="TestSQLStatement.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestSQLStatementList.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestTransactionalBusinessObjectDB.cs" />
-    <Compile Include="TestTransactionCommitterDB.cs" />
-    <Compile Include="TestTransactionLoggerDB.cs" />
-    <Compile Include="TestUpdateStatementGenerator.cs" />
-    <Compile Include="TransactionCommitterStubDB.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="key.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.VisualBasic.PowerPacks.10.0">
-      <Visible>False</Visible>
-      <ProductName>Microsoft Visual Basic PowerPacks 10.0</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
-      <Visible>False</Visible>
-      <ProductName>Windows Installer 3.1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="sqlite-testdb.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
-  </PropertyGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <FlavorProperties GUID="{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}">
+        <HostingProcess disable="1" />
+      </FlavorProperties>
+    </VisualStudio>
+  </ProjectExtensions>
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
