--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -48,6 +48,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="MySql.Data, Version=6.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
@@ -110,6 +114,7 @@
     <Compile Include="Util\File\TestCsvFileWriter.cs" />
     <Compile Include="Util\TestByteString.cs" />
     <Compile Include="Util\TestDateTimeUtilities.cs" />
+    <Compile Include="Util\TestHabaneroEnvironmentCF.cs" />
     <Compile Include="Util\TestImageThumbnailCreator.cs" />
     <Compile Include="Util\TestLongText.cs" />
     <Compile Include="Util\TestReflectionUtilities.cs" />
