Not logged in Redmine due to Internet being down. Fixed bug where the XmlRuleLoader was creating an Integer Rule instead of a Long Rule.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -159,7 +159,7 @@
     <Compile Include="Loaders\TestXmlKeyLoader.cs" />
     <Compile Include="Loaders\TestXmlPrimaryKeyLoader.cs" />
     <Compile Include="Loaders\TestXmlPropertyLoader.cs" />
-    <Compile Include="Loaders\TestXmlPropertyRuleLoader.cs" />
+    <Compile Include="Loaders\TestXmlRuleLoader.cs" />
     <Compile Include="Loaders\TestXmlPropertyRuleLoader_ClassDefOnly.cs" />
     <Compile Include="Loaders\TestXmlRelationshipLoader.cs" />
     <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
