Completed #1717 (Loading objects using DataStoreInMemoryXmlReader should update already existing objects)

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -192,6 +192,7 @@
     <Compile Include="TestBOStatus.cs" />
     <Compile Include="TestDataAccessorMultiSource.cs" />
     <Compile Include="TestDataStoreInMemoryBinaryWriter.cs" />
+    <Compile Include="TestDataStoreInMemoryXmlReader.cs" />
     <Compile Include="TestDataStoreInMemoryXmlWriter.cs" />
     <Compile Include="TestNumberGenerator.cs" />
     <Compile Include="TestPack\BOWithIntID.cs" />
