Work on #1722 (Support for xml serializing Image properties) Added a new mapper for images to serialise/deserialise them

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -161,6 +161,7 @@
     <Compile Include="ClassDefinition\TestSingleRelationshipDef.cs" />
     <Compile Include="CriteriaManager\TestCriteriaValues.cs" />
     <Compile Include="DataMappers\TestBOPropDataMapper_long.cs" />
+    <Compile Include="DataMappers\TestDataMapper_Image.cs" />
     <Compile Include="Loaders\TestClassDefsXmlValidator.cs" />
     <Compile Include="ClassDefinition\TestClassDefValidator.cs" />
     <Compile Include="Loaders\TestXmlBusinessObjectLookupListLoader.cs" />
