--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -155,6 +155,7 @@
     <Compile Include="ClassDefinition\BOPropDateTimeDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropGeneralDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropGuidDataMapper.cs" />
+    <Compile Include="ClassDefinition\BOPropImageDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropIntDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropLongDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropStringDataMapper.cs" />
