Work on #1723 (Load a result set directly using an ISelectQuery (without using a BusinessObjectCollection)) Added a GetResultSet method to IBusinessObjectLoader and implemented this in BusinessObjectLoaderDB and BusinessObjectLoaderInMemory. Extracted a CreateQueryField method in QueryBuilder to help with adding your own fields to a SelectQuery. Added some tests for this. Created a TestBusinessObjectLoader_GetResultSet with the new tests in it. These are not comprehensive yet. Created a ResultSet class to store the result set returned by IBusinessObjectLoader.GetResultSet()

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -334,6 +334,7 @@
     <Compile Include="PropReadWriteRule.cs" />
     <Compile Include="QueryField.cs" />
     <Compile Include="Result.cs" />
+    <Compile Include="ResultSet.cs" />
     <Compile Include="RethrowingExceptionNotifier.cs" />
     <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="Source.cs" />
