--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -148,7 +148,7 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
-	<Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.46.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
@@ -208,6 +208,7 @@
     <Compile Include="TestBOPropLookupList_DatabaseLookupList_Int.cs" />
     <Compile Include="TestBusinessObjectLoaderDB.cs" />
     <Compile Include="TestBusinessObjectLoaderDBWithInheritance.cs" />
+    <Compile Include="TestBusinessObjectLoaderDB_GetResultSet.cs" />
     <Compile Include="TestBusinessObjectLoader_GetBusinessObjectCollectionDB.cs" />
     <Compile Include="TestBusinessObjectLoader_RefreshCollectionDB.cs" />
     <Compile Include="TestBusinessObjectLookupListDB.cs" />
