Worked on #1724 (BOPropDataMapper classes should be decoupled from PropDef etc) Moved all the BOPropDataMapper classes to Habanero.Base and renamed them all to DataMapper. Extracted an IDataMapper interface. Created an IDataMapperFactory and added it to the GlobalRegistry. Implemented a default DataMapperFactory which is initialised with specific DataMapper types for those that have, and the GeneralDataMapper for those that don't. Changed PropDef to use this factory on the GlobalRegistry to get its DataMapper object. Created a TimeSpanDataMapper for TimeSpan properties. Added a bunch of tests to TestGeneralDataMapper to test its TryParsePropValue method fully.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -143,6 +143,19 @@
     <Compile Include="BusinessObjectDTO.cs" />
     <Compile Include="ClassDefCol.cs" />
     <Compile Include="CoverageExcludeAttribute.cs" />
+    <Compile Include="DataMappers\BoolDataMapper.cs" />
+    <Compile Include="DataMappers\DataMapper.cs" />
+    <Compile Include="DataMappers\DataMapperFactory.cs" />
+    <Compile Include="DataMappers\DateTimeDataMapper.cs" />
+    <Compile Include="DataMappers\GeneralDataMapper.cs" />
+    <Compile Include="DataMappers\GuidDataMapper.cs" />
+    <Compile Include="DataMappers\IDataMapper.cs" />
+    <Compile Include="DataMappers\IDataMapperFactory.cs" />
+    <Compile Include="DataMappers\ImageDataMapper.cs" />
+    <Compile Include="DataMappers\IntDataMapper.cs" />
+    <Compile Include="DataMappers\LongDataMapper.cs" />
+    <Compile Include="DataMappers\StringDataMapper.cs" />
+    <Compile Include="DataMappers\TimeSpanDataMapper.cs" />
     <Compile Include="DateTimeNow.cs" />
     <Compile Include="DateTimeNowConverter.cs" />
     <Compile Include="DateTimeTodayConverter.cs" />
