Worked on #1727 (NumberGeneratorPessimisticLocking skipping numbers when exception occurs during persisting) Changed NumberGeneratorPessimisticLocking construction so that it loads the ClassDefs for BOSequenceNumberLocking if required. This change has been made so that NumberGeneratorPessimisticLocking works similarly to NumberGenerator.

--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -245,6 +245,7 @@
     <Compile Include="TestMultipleRelationship_Composition_DB.cs" />
     <Compile Include="TestMySqlDatabaseConnection.cs" />
     <Compile Include="TestNumberGeneratorDB.cs" />
+    <Compile Include="TestNumberGeneratorPessimisticLocking.cs" />
     <Compile Include="TestParameterNameGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
