Work on #1729 (Serialising/deserialising to/from custom xml - when going across tiers) Created an ObjectTreeXmlReader class which is a copy of the DataStoreInMemoryXmlReader for use with deserialising a stream that consists of unpersisted objects.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -203,6 +203,7 @@
     <Compile Include="ObjectManager\BusinessObjectManager.cs" />
     <Compile Include="ObjectManager\BusinessObjectManagerNull.cs" />
     <Compile Include="ObjectManager\IBusinessObjectManager.cs" />
+    <Compile Include="ObjectTreeXmlReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
