Work on #1729 (Serialising/deserialising to/from custom xml - when going across tiers) Created a BusinessObjectXmlReader and BusinessObjectXmlWriter that does the core conversion to and from xml.  This is now used by DataStoreInMemoryXmlReader/Writer and ObjectTreeXmlReader Added lots of comments for DataStoreInMemoryXmlReader and DataStoreInMemoryXmlWriter. Added tests for ObjectTreeXmlReader, the class the implements the requested feature.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -150,6 +150,8 @@
     <Compile Include="BusinessObjectLastUpdatePropertiesLog.cs" />
     <Compile Include="BusinessObjectLoaderInMemory.cs" />
     <Compile Include="BusinessObjectLoaderMultiSource.cs" />
+    <Compile Include="BusinessObjectXmlReader.cs" />
+    <Compile Include="BusinessObjectXmlWriter.cs" />
     <Compile Include="ClassDefinition\ClassDefHelper.cs" />
     <Compile Include="ClassDefinition\ClassDefValidator.cs" />
     <Compile Include="ClassDefinition\FilterDef.cs" />
