--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -160,6 +160,7 @@
     <Compile Include="ClassDefinition\TestFilterDef.cs" />
     <Compile Include="ClassDefinition\TestSingleRelationshipDef.cs" />
     <Compile Include="CriteriaManager\TestCriteriaValues.cs" />
+    <Compile Include="CriteriaManager\TestCriteria_Create.cs" />
     <Compile Include="Loaders\TestClassDefsXmlValidator.cs" />
     <Compile Include="ClassDefinition\TestClassDefValidator.cs" />
     <Compile Include="Loaders\TestXmlBusinessObjectLookupListLoader.cs" />
