Fixed #1740 (byte[] is not supported by the data mappers) Added a ByteArrayDataMapper to convert byte[] types to/from strings (using mime64). Updated the default DataMapperFactory to include this mapper. Added tests for these.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -144,6 +144,7 @@
     <Compile Include="ClassDefCol.cs" />
     <Compile Include="CoverageExcludeAttribute.cs" />
     <Compile Include="DataMappers\BoolDataMapper.cs" />
+    <Compile Include="DataMappers\ByteArrayDataMapper.cs" />
     <Compile Include="DataMappers\DataMapper.cs" />
     <Compile Include="DataMappers\DataMapperFactory.cs" />
     <Compile Include="DataMappers\DateTimeDataMapper.cs" />
